# whspr

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: release.yml
crates/whspr-client/: Cargo.toml
crates/whspr-client/src/: main.rs  net.rs  state.rs
crates/whspr-client/src/tui/: mod.rs  ui.rs
crates/whspr-protocol/: Cargo.toml
crates/whspr-protocol/src/: crypto.rs  frame.rs  identity.rs  lib.rs  message.rs
crates/whspr-server/: Cargo.toml
crates/whspr-server/src/: config.rs  connection.rs  main.rs  queue.rs  session.rs  store.rs
docs/plans/: 2026-01-17-whspr-design.md  2026-01-17-whspr-implementation.md
wordlists/: adjectives.txt  animals.txt
