[workspace]
resolver = "2"
members = [
    "crates/whspr-protocol",
    "crates/whspr-server",
    "crates/whspr-client",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Pierre"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# QUIC
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Crypto
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# Serialization
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Utilities
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
