[package]
name = "whspr-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "whspr"
path = "src/main.rs"

[dependencies]
whspr-protocol = { path = "../whspr-protocol" }
tokio.workspace = true
quinn.workspace = true
rustls.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow = "1"
bytes.workspace = true
dirs = "5"
rand.workspace = true
x25519-dalek.workspace = true
