[package]
name = "whspr-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "whspr-server"
path = "src/main.rs"

[dependencies]
whspr-protocol = { path = "../whspr-protocol" }
tokio.workspace = true
quinn.workspace = true
rustls.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow = "1"
rcgen = "0.13"
